# version_check_hook

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
version_check/: __init__.py  version_check.py
