[tool.poetry]
name = "version_check"
version = "1.2.0"
description = "A pre-commit hook to check if version in pyproject.toml matches __version__ in __init__.py file"
authors = ["Darlan Cavalcante Moreira <darcamo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
version_check = 'version_check:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
